# shame

./: Cargo.toml
examples/api_showcase/src/: main.rs
examples/bindless/: Cargo.toml
examples/bindless/src/: app.rs  bindless.rs  gpu.rs  main.rs
examples/hello_triangles/src/util/: shame_glam.rs
examples/shame_wgpu/src/: binding.rs  conversion.rs  lib.rs
examples/type_layout/src/: main.rs
examples/type_layout2/src/: main.rs
examples/vertex_buffer/src/: main.rs
shame/: Cargo.toml
shame/src/: lib.rs
shame/src/backend/wgsl/: mod.rs  write_node.rs  write_type.rs
shame/src/common/: proc_macro_reexports.rs  proc_macro_utils.rs
shame/src/frontend/any/: io_iter.rs  mod.rs  render_io.rs  shared_io.rs
shame/src/frontend/encoding/: binding.rs  binding_array.rs  buffer.rs  flow.rs  io_iter.rs  io_iter_dynamic.rs  mod.rs  pipeline_info.rs  ref_op.rs
shame/src/frontend/rust_types/: array.rs  atomic.rs  glam.rs  layout_traits.rs  len.rs  mat.rs  mem.rs  mod.rs  packed_vec.rs  reference.rs  struct_.rs  type_layout.rs  type_traits.rs  (+3 more)
shame/tests/: test_buffer_constraints.rs  test_layout.rs
shame/tests/buffer_constraints_fail/: atomic_in_storage_only.rs  atomic_in_storage_only.stderr  uniform_is_read.rs  uniform_is_read.stderr  write_requires_ref.rs  write_requires_ref.stderr
shame_derive/src/: derive_layout.rs  lib.rs
shame_utils/: Cargo.toml
shame_utils/examples/: demo.rs
shame_utils/macros/: Cargo.toml
shame_utils/macros/src/: gpu_control_flow.rs  lib.rs  no_padding.rs  to_glam.rs
shame_utils/src/: const_str.rs  lib.rs  no_padding.rs  to_glam.rs
(+27 files in other folders)
