[package]
name = "shame_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
shame_utils_macros = { path = "macros" }
shame = { path = "../shame" }
glam = { version = "0.30", features = ["bytemuck"] }

[dev-dependencies]
bytemuck = { version = "1.23", features = ["derive"] }

[features]
default = ["pretty_no_padding"]
pretty_no_padding = ["shame_utils_macros/pretty"]
