[package]
name = "bindless"
version = "0.1.0"
edition = "2024"

[dependencies]
shame_utils = { path = "../../shame_utils" }
shame_wgpu = { path = "../shame_wgpu" }
shame = { path = "../../shame" }
wgpu = "25.0.0"
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.30", features = [
    "bytemuck",
    "cuda",
] } # "cuda" for 8-byte aligned Vec2
winit = "0.30.9"
pollster = "0.4"
thiserror = "2.0.12"
rand = "0.9.2"
